--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -9,7 +9,7 @@
 				<button class="button button-icon button-clear ion-android-more-vertical" id="menu-popover" ng-click="popover.show($event)"></button>
 			</ion-nav-buttons>
 		</ion-nav-bar>
-		<button id="fab" ng-show="show_fab" class="button button-assertive button-fab button-fab-bottom-right"> <i class="icon ion-alert-circled"></i> </button>
+		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i class="icon ion-alert-circled"></i> </button>
 		<ion-nav-view name="menuContent"></ion-nav-view>
 	</ion-side-menu-content>
 	<ion-side-menu side="left">
