Propuesta botón de pánico

--- a/xmifamilia/xmifamilia/www/templates/personal_info.html
+++ b/xmifamilia/xmifamilia/www/templates/personal_info.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cuenta y subscripción">
+<ion-view view-title="Subscripción">
 	<ion-content>
 		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Mantenga actualizada su información</strong> </div>
 		<div class="im-wrapper">
