--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -9,7 +9,7 @@
 				<button class="button button-icon button-clear ion-android-more-vertical" id="menu-popover" ng-click="popover.show($event)"></button>
 			</ion-nav-buttons>
 		</ion-nav-bar>
-		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i class="icon ion-alert-circled"></i> </button>
+		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i class="icon ion-ios-bell"></i> </button>
 		<ion-nav-view name="menuContent"></ion-nav-view>
 	</ion-side-menu-content>
 	<ion-side-menu side="left">
@@ -19,7 +19,7 @@
 		<ion-content class="stable-bg has-expanded-header">
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"> Botón de pánico </ion-item>
-				<ion-item nav-clear menu-close href="#/app/personal_info"> Actualizar datos </ion-item>
+				<ion-item nav-clear menu-close href="#/app/personal_info"> Subscripción </ion-item>
 				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
                     Teléfonos de ayuda
@@ -31,11 +31,13 @@
                     Mi paquete
                 </ion-item>
 -->
+<!--
 				<ion-item nav-clear menu-close href="#/app/components"> Components+ </ion-item>
 				<ion-item nav-clear menu-close href="#/app/extensions"> Extensions </ion-item>
 				<ion-item nav-clear menu-close href="#/app/lists"> Motion Lists </ion-item>
 				<ion-item nav-clear menu-close href="#/app/motion"> Motion Elements </ion-item>
 				<ion-item nav-clear menu-close href="#/app/ink"> Ink </ion-item>
+-->
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
