Se independiza plan de contingencia

--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -20,6 +20,7 @@
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"> Botón de pánico </ion-item>
 				<ion-item nav-clear menu-close href="#/app/personal_info"> Subscripción </ion-item>
+				<ion-item nav-clear menu-close href="#/app/contingency_plan"> Plan de contingencia </ion-item>
 				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
                     Teléfonos de ayuda
