--- a/xmifamilia/xmifamilia/www/templates/personal_info.html
+++ b/xmifamilia/xmifamilia/www/templates/personal_info.html
@@ -23,7 +23,7 @@
 									<span class="badge badge-balanced">activa</span>
                 </a>
                 <a class="item item-icon-left">
-                    <i class="icon ion-ios-calendar-outline"></i> Fecha de vencimiento
+                    <i class="icon ion-ios-calendar-outline"></i> Vencimiento
                     <span class="item-note">
                         19/Marzo/2018
                     </span>
