--- a/xmifamilia/xmifamilia/www/templates/contingency_plan.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Plan de contingencia">
+<ion-view view-title="Plan familiar de contingencia">
 	<ion-content>
 <!--		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Este es tu plan de contingencia</strong> </div>-->
 		
 		<div class="im-wrapper">
-			<h4><i class="icon ion-android-people"></i> Plan familiar de contingencia</h4>
+			<h4><i class="icon ion-android-people"></i> Familiares registrados</h4>
 			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información ya que es importante.</p>
 			<div class="list card stable-bg">
 				<div class="item item-avatar"> <img src="img/jon-snow.jpg">
@@ -33,7 +33,7 @@
 			</div>
 			
 			<button class="button button-block button-balanced ink" data-ink-color="#9DEAFF" data-ink-opacity="1">
-                    Agregar nuevo
+                    Añade un familiar
                 </button>
 			
 			
