--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -19,9 +19,10 @@
 		<ion-content class="stable-bg has-expanded-header">
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"> Botón de pánico </ion-item>
-				<ion-item nav-clear menu-close href="#/app/personal_info"> Subscripción </ion-item>
-				<ion-item nav-clear menu-close href="#/app/contingency_plan"> Plan de contingencia </ion-item>
-				<!--
+				
+				<ion-item nav-clear menu-close href="#/app/contingency_plan"> Plan familiar de contingencia </ion-item>
+
+				<ion-item nav-clear menu-close href="#/app/personal_info"> Subscripción </ion-item><!--
                 <ion-item nav-clear menu-close href="#/app/components">
                     Teléfonos de ayuda
                 </ion-item>
