--- a/xmifamilia/xmifamilia/www/templates/contingency_plan.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan.html
@@ -4,7 +4,7 @@
 		
 		<div class="im-wrapper">
 			<h4><i class="icon ion-android-people"></i> Familiares registrados</h4>
-			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información ya que es importante.</p>
+			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información.</p>
 			<div class="list card stable-bg">
 				<div class="item item-avatar"> <img src="img/jon-snow.jpg">
 					<h2>Miguel Gómez</h2>
