Se añaden iconos al sidebar

--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -18,11 +18,16 @@
 		</ion-header-bar>
 		<ion-content class="stable-bg has-expanded-header">
 			<ion-list>
-				<ion-item nav-clear menu-close href="#/app/panic"> Botón de pánico </ion-item>
+				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
 				
-				<ion-item nav-clear menu-close href="#/app/contingency_plan"> Plan familiar de contingencia </ion-item>
+				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
 
-				<ion-item nav-clear menu-close href="#/app/personal_info"> Subscripción </ion-item><!--
+				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Subscripción </ion-item>
+<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
+				
+				
+				
+				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
                     Teléfonos de ayuda
                 </ion-item>
