--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -22,7 +22,7 @@
 				
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
 
-				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Subscripción </ion-item>
+				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y subscripción </ion-item>
 <!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
 				
 				
