--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -19,15 +19,11 @@
 		<ion-content class="stable-bg has-expanded-header">
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
-				
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
-
 				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y subscripción </ion-item>
 				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Ayuda y soporte </ion-item>
-<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
-				
-				
-				
+				<ion-item nav-clear menu-close href="#/login"><i class="icon ion-door"></i> Salir </ion-item>
+				<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
 				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
                     Teléfonos de ayuda
@@ -39,14 +35,13 @@
                     Mi paquete
                 </ion-item>
 -->
-<!--
+				<!--
 				<ion-item nav-clear menu-close href="#/app/components"> Components+ </ion-item>
 				<ion-item nav-clear menu-close href="#/app/extensions"> Extensions </ion-item>
 				<ion-item nav-clear menu-close href="#/app/lists"> Motion Lists </ion-item>
 				<ion-item nav-clear menu-close href="#/app/motion"> Motion Elements </ion-item>
 				<ion-item nav-clear menu-close href="#/app/ink"> Ink </ion-item>
--->
-			</ion-list>
+--></ion-list>
 		</ion-content>
 	</ion-side-menu>
 </ion-side-menus>
