--- a/xmifamilia/xmifamilia/www/templates/intro_slider.html
+++ b/xmifamilia/xmifamilia/www/templates/intro_slider.html
@@ -22,7 +22,7 @@
 			<div class="im-wrapper">
 				<p class="text-center"><img class="item" src="img/intro/3.png"></p>
 				<h4 class="text-center">Recibe apoyo legal y notificaremos a tu familia</h4>
-				<p class="text-center">Nuestros agentes te ayudarán con apoyo legal, consular y se comunicarán con tu familia dando instrucciones que dejes en la aplicación.</p>
+				<p class="text-center">Nuestros agentes te ayudarán con apoyo legal, consular y se comunicarán con tu familia.</p>
 				<button id="start_button" class="button button-block button-balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
 		</div>
