Nosotros te ayudamos

--- a/xmifamilia/xmifamilia/www/templates/intro_slider.html
+++ b/xmifamilia/xmifamilia/www/templates/intro_slider.html
@@ -21,7 +21,7 @@
 		<div class="box">
 			<div class="im-wrapper">
 				<p class="text-center"><img class="item" src="img/intro/3.png"></p>
-				<h4 class="text-center">Recibe apoyo legal y notificaremos a tu familia</h4>
+				<h4 class="text-center">Nosotros te ayudamos</h4>
 				<p class="text-center">Nuestros agentes te ayudarán con apoyo legal, consular y se comunicarán con tu familia.</p>
 				<button id="start_button" class="button button-block button-balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
