--- a/xmifamilia/xmifamilia/www/templates/contingency_plan.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan.html
@@ -3,8 +3,8 @@
 <!--		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Este es tu plan de contingencia</strong> </div>-->
 		
 		<div class="im-wrapper">
-			<h4><i class="icon ion-android-people"></i> Familiares registrados</h4>
-			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información.</p>
+			<h4><i class="icon ion-android-people"></i> Plan de Contingencia</h4>
+			<p>Ante una situación crítica cuentas con procedimientos alternativos para tus contactos seleccionados, cuyo fin es una reacción especifica ante alguna detención. El plan de contingencia es un método preventivo, el cual da un avance a la hora de una eventualidad. Tu plan de contingencia hace cara a futuros acontecimientos para los que hace falta estar preparado.</p>
 			<div class="list card stable-bg">
 				<div class="item item-avatar"> <img src="img/jon-snow.jpg">
 					<h2>Miguel Gómez</h2>
