--- a/xmifamilia/xmifamilia/www/templates/panic.html
+++ b/xmifamilia/xmifamilia/www/templates/panic.html
@@ -21,13 +21,16 @@
 					
 						<p ng-if="show_timer" class="text-center">Se pedirá ayuda en 3 segundos...</p>
 -->
-			<p ng-if="!show_timer">Presiona el botón y nos comunicaremos contigo para <strong>brindarte apoyo</strong>, si crees estar sujeto a una detención no dudes en activar la alarma.</p>
-			<div ng-if="show_timer" class="list">
-				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Alarma activada correctamente </a>
-				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Recibimos tu ubicación </a>
-				<a class="item item-icon-left"> <i class="icon stable ion-ios-checkmark-outline"></i> Reporte verificado </a>
-				<a class="item item-icon-left"> <i class="icon stable ion-ios-checkmark-outline"></i> Localizando consulado más cercano </a>
-				<a class="item item-icon-left"> <i class="icon stable ion-ios-checkmark-outline"></i> Abogado ha establecido contacto </a>
+			<p ng-if="!show_timer">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica.</p>
+			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-information-circled"></i> Tus servicios contratados</h4>
+			<div ng-if="!show_timer" class="list">
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Asesoría Migratoria</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Red de Abogados</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Plan de Contingencia</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Botón de Pánico</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Llamada Efectiva 1x5</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Llamadas Ilimitadas EUA-MÉX</a>
+				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> News Feed</a>
 			</div>
 			<!--
 			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-info-circle"></i> Tus servicios</h4>
@@ -41,13 +44,14 @@
                     Nos comunicaremos con tu familia.
                 </a> </div>
 -->
-			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-help-circled"></i> Tus servicios</h4>
+			
+<!--
 			<div ng-if="!show_timer" class="list">
 				<a class="item item-icon-left"> <i class="icon ion-ios-telephone"></i> Llama al 1-800 MARPEX </a>
 				<a class="item item-icon-left"> <i class="icon ion-person-stalker"></i> Servicio de abogado. </a>
-				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Nos comunicaremos con tu familia.
-					<!--                    <span class="badge badge-assertive">0</span>--></a>
+				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Nos comunicaremos con tu familia.</a>
 			</div>
+-->
 			<h4 ng-if="show_timer" class="border-top"><i class="icon ion-information-circled"></i> Recomendaciones</h4>
 			<div ng-if="show_timer" class="list">
 				<a class="item item-icon-left"> <i class="icon ion-android-hand"></i> Manten la calma. </a>
