--- a/xmifamilia/xmifamilia/www/templates/subscribe.html
+++ b/xmifamilia/xmifamilia/www/templates/subscribe.html
@@ -4,6 +4,7 @@
 		<div class="im-wrapper">
 			<!--			<p>Para disfrutar de los beneficios de xTuFamilia registre la siguiente información.</p>-->
 			<div class="list">
+<!--				<p>El paquete “x mi protección” se puede contratar de manera voluntaria desde el sitio web o la App Móvil, únicamente es necesario contar con nombre completo, teléfono celular y correo electrónico. Tú decides si pagas por medio de tarjeta de crédito/débito, PayPal o pago referenciado. Una vez autorizado el pago puedes empezar uso de todos los servicios de prevención al inmigrante.</p>-->
 				<h4 class="border-top">
                 <i class="icon ion-profile"></i>
                 Información personal
@@ -16,6 +17,8 @@
 					<input type="text" placeholder="Nombre"> </label>
 				<label class="item item-input item-floating-label"> <span class="input-label">Apellido</span>
 					<input type="text" placeholder="Apellidos"> </label>
+				<label class="item item-input item-floating-label"> <span class="input-label">Teléfono celular</span>
+					<input type="number" placeholder="Teléfono celular"> </label>
 				<label class="item item-input item-select">
 					<div class="input-label"> Séxo </div>
 					<select>
@@ -27,22 +30,53 @@
 				<br />
 				<h4 class="border-top">
                 <i class="icon ion-profile"></i>
-                Su subscripción incluye
+                Sesoría migratoria
             </h4>
+				
 				<div class="list card">
 					<div class="item item-body">
-						<div class="list">
-							<a class="item item-icon-left"> <i class="icon ion-ios-bell"></i> Activa tu alarma </a>
-							<a class="item item-icon-left"> <i class="icon ion-ios-telephone"></i> Recibe soporte telefónico al 1-800 </a>
-							<a class="item item-icon-left"> <i class="icon ion-person-stalker"></i> Servicio de abogado. </a>
-							<a class="item item-icon-left"> <i class="icon ion-ios-book"></i> Recibe apoyo consultar.</a>
-							<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Nos comunicaremos con tu familia. </a>
-						</div>
+						<h2 class=" text-center">Asesoría Migratoria</h2>
+						<p class="text-center">Asesoría especializada 24/7 en diversos temas migratorios. Expertos siempre disponibles para brindarte ayuda según tus necesidades.</p>
+						<h2 class=" text-center">Red de Abogados</h2>
+						<p class="text-center">Seguimiento de los mejores abogados de Estados Unidos que brindan apoyo antes, durante y después de una detención de manera presencial.</p>
+						<h2 class=" text-center">Plan de Contingencia</h2>
+						<p class="text-center">Ante una emergencia , se activa tu plan  designado para cada contacto seleccionado por medio de llamadas personalizadas para continuar tu vida aún en futuros acontecimientos difíciles</p>
+						<h2 class=" text-center">Botón de Pánico</h2>
+						<p class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica</p>
+						<h2 class=" text-center">Llamada Efectiva 1x5</h2>
+						<p class="text-center">Siempre hay alguien que te atenderá personalmente, haciendo que tu llamada ante una detención se haga efectiva a 3 contactos, abogado y consulado.</p>
+						<h2 class=" text-center">Llamadas Ilimitadas EUA-MÉX</h2>
+						<p class="text-center">Habla a México, Estado Unidos y 44 países más las veces que necesites, tus llamadas duran máximo 10 Minutos</p>
+						<h2 class=" text-center">News Feed</h2>
+						<p class="text-center">Mantenerse al día con respecto a información deseada ya no será difícil, obtén las últimas noticias en tiempo real.</p>
 					</div>
 					<div class="item tabs tabs-secondary tabs-icon-left">
 						<p>Costo mensual: <strong>$59 USD</strong></p>
 					</div>
 				</div>
+				
+				
+<!--
+				<div class="list card">
+					<div class="item item-body">
+						<h2 class=" text-center">Asesoría Migratoria</h2>
+						<p class=" text-center"><strong>Asesoría especializada 24/7 en diversos temas migratorios.</strong> Expertos siempre disponibles para brindarte ayuda según tus necesidades.</p>
+						<h4 class=" text-center">Red de Abogados</h4>
+						<p class=" text-center">Seguimiento de los mejores abogados de Estados Unidos que brindan apoyo antes, durante y después de una detención de manera presencial.</p>
+						<h4>Plan de Contingencia</h4>
+						<p>Ante una emergencia , se activa tu plan  designado para cada contacto seleccionado por medio de llamadas personalizadas para continuar tu vida aún en futuros acontecimientos difíciles</p>
+						<h4>Botón de Pánico</h4>
+						<p>Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica</p>
+						<h4>Llamada Efectiva 1x5</h4>
+						<p>Siempre hay alguien que te atenderá personalmente, haciendo que tu llamada ante una detención se haga efectiva a 3 contactos, abogado y consulado.</p>
+						<h4>Llamadas Ilimitadas EUA-MÉX</h4>
+						<p>Habla a México, Estado Unidos y 44 países más las veces que necesites, tus llamadas duran máximo 10 Minutos</p>
+					</div>
+					<div class="item tabs tabs-secondary tabs-icon-left">
+						<p>Costo mensual: <strong>$59 USD</strong></p>
+					</div>
+				</div>
+-->
 				<div class="item item-checkbox">
 					<label class="checkbox">
 						<input type="checkbox"> </label> Acepto términos y condiciones. </div>
