Mejora de textos

--- a/xmifamilia/xmifamilia/www/templates/subscribe.html
+++ b/xmifamilia/xmifamilia/www/templates/subscribe.html
@@ -30,7 +30,7 @@
 				<br />
 				<h4 class="border-top">
                 <i class="icon ion-profile"></i>
-                Sesoría migratoria
+                Tu subscripción incluye
             </h4>
 				
 				<div class="list card">
