Se carga iconos de pro migrante

--- a/xmifamilia/xmifamilia/www/templates/login.html
+++ b/xmifamilia/xmifamilia/www/templates/login.html
@@ -1,5 +1,8 @@
 <div class="im-wrapper">
-	<p class="text-center"><img src="img/logo.png" width="80px"></p>
+	<br>
+	<br>
+	<br>
+	<p class="text-center"><img src="img/logo-login.png" width="80%" ng-click="goTo('intro')"></p>
 	<div class="list">
 		<label class="item item-input item-floating-label"> <span class="input-label">Usuario</span>
 			<input type="text" placeholder="Usuario / Correo electrónico"> </label>
