--- a/xmifamilia/xmifamilia/www/templates/subscribe.html
+++ b/xmifamilia/xmifamilia/www/templates/subscribe.html
@@ -1,6 +1,9 @@
 <ion-view view-title="Subscripción">
 	<ion-content>
-		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Ingrese sus datos</strong> </div>
+		
+		
+		
+		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Subscripción a Pro migrante</strong> </div>
 		<div class="im-wrapper">
 			<!--			<p>Para disfrutar de los beneficios de xTuFamilia registre la siguiente información.</p>-->
 			<div class="list">
@@ -9,7 +12,7 @@
                 <i class="icon ion-profile"></i>
                 Información personal
             </h4>
-				<div class="item item-avatar"> <img src="img/arya.jpg">
+				<div class="item item-avatar"> <img src="img/profile-photo.jpg">
 					<p class="text-muted">Foto de perfil</p>
 					<p>&nbsp</p>
 				</div>
