--- a/xmifamilia/xmifamilia/www/templates/contingency_plan.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan.html
@@ -6,11 +6,11 @@
 			<h4><i class="icon ion-android-people"></i> Plan de Contingencia</h4>
 			<p>Ante una situación crítica cuentas con procedimientos alternativos para tus contactos seleccionados, cuyo fin es una reacción especifica ante alguna detención. El plan de contingencia es un método preventivo, el cual da un avance a la hora de una eventualidad. Tu plan de contingencia hace cara a futuros acontecimientos para los que hace falta estar preparado.</p>
 			<div class="list card stable-bg">
-				<div class="item item-avatar"> <img src="img/jon-snow.jpg">
+				<div class="item">
 					<h2>Miguel Gómez</h2>
 					<p>San Luis Potosí, México</p>
 				</div>
-				<div class="item item-body"> Llamar a mi hermamo y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.
+				<div class="item item-body"> Llamar a mi hermano y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.
 					<p> <a class="subdued">Relación:</a> <a class="subdued">Hermano</a> </p>
 				</div>
 				<div class="item tabs tabs-secondary tabs-icon-left">
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="list card stable-bg">
-				<div class="item item-avatar"> <img src="img/tyrion.jpg">
+				<div class="item"> 
 					<h2>Mario Pérez Hernández</h2>
 					<p>Michoacán, México</p>
 				</div>
