--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -14,7 +14,7 @@
 	</ion-side-menu-content>
 	<ion-side-menu side="left">
 		<ion-header-bar class="expanded"> <img src="img/logo.png" class="avatar motion spin fade">
-			<div class="menu-bottom"> xMiFamilia </div>
+			<div class="menu-bottom"> Pro migrante </div>
 		</ion-header-bar>
 		<ion-content class="stable-bg has-expanded-header">
 			<ion-list>
