Noticias y editar parentezcos

--- a/xmifamilia/xmifamilia/www/templates/personal_info.html
+++ b/xmifamilia/xmifamilia/www/templates/personal_info.html
@@ -41,7 +41,7 @@
 			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-android-people"></i> Plan familiar de contingencia</h4>
 			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información ya que es importante.</p>
 			<div class="list card stable-bg">
-				<div class="item item-avatar"> <img src="img/jon-snow.jpg">
+				<div class="item"> 
 					<h2>Miguel Gómez</h2>
 					<p>San Luis Potosí, México</p>
 				</div>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="list card stable-bg">
-				<div class="item item-avatar"> <img src="img/tyrion.jpg">
+				<div>
 					<h2>Mario Pérez Hernández</h2>
 					<p>Michoacán, México</p>
 				</div>
