--- a/xmifamilia/xmifamilia/www/templates/contingency_plan.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan.html
@@ -8,31 +8,31 @@
 			<div class="list card stable-bg">
 				<div class="item">
 					<h2>Miguel Gómez</h2>
-					<p>San Luis Potosí, México</p>
+					<p>México</p>
 				</div>
 				<div class="item item-body"> Llamar a mi hermano y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.
 					<p> <a class="subdued">Relación:</a> <a class="subdued">Hermano</a> </p>
 				</div>
 				<div class="item tabs tabs-secondary tabs-icon-left">
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-ios-telephone"></i> +52 4366283658 </a>
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-edit"></i> Editar </a>
+					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"  href="tel:555-555-5555"> <i class="icon ion-ios-telephone"></i> Llamar </a>
+					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5" ng-click="goTo('app.contingency_plan_edit')"> <i class="icon ion-compose"></i> Editar </a>
 				</div>
 			</div>
 			<div class="list card stable-bg">
 				<div class="item"> 
 					<h2>Mario Pérez Hernández</h2>
-					<p>Michoacán, México</p>
+					<p>Estados Unidos</p>
 				</div>
 				<div class="item item-body"> Pedir que retire dinero de la cuenta de ahorro y enviar a primo Luis.
 					<p> <a class="subdued">Relación:</a> <a class="subdued">Padre</a> </p>
 				</div>
 				<div class="item tabs tabs-secondary tabs-icon-left">
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-ios-telephone"></i> Llamar </a>
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-edit"></i> Editar </a>
+					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5" href="tel:555-555-5555"> <i class="icon ion-ios-telephone"></i> Llamar </a>
+					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5" ng-click="goTo('app.contingency_plan_edit')"> <i class="icon ion-compose"></i> Editar </a>
 				</div>
 			</div>
 			
-			<button class="button button-block button-balanced ink" data-ink-color="#9DEAFF" data-ink-opacity="1">
+			<button class="button button-block button-balanced ink" data-ink-color="#9DEAFF" data-ink-opacity="1" ng-click="goTo('app.contingency_plan_edit')">
                     Añade un familiar
                 </button>
 			<br>
