--- a/xmifamilia/xmifamilia/www/templates/menu.html
+++ b/xmifamilia/xmifamilia/www/templates/menu.html
@@ -21,7 +21,9 @@
 				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
 				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y subscripción </ion-item>
+				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-chatbubbles"></i> News feed </ion-item>
 				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Ayuda y soporte </ion-item>
+				
 				<ion-item nav-clear menu-close href="#/login"><i class="icon ion-door"></i> Salir </ion-item>
 				<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
 				<!--
