--- a/xmifamilia/xmifamilia/www/templates/help_support.html
+++ b/xmifamilia/xmifamilia/www/templates/help_support.html
@@ -1,16 +1,16 @@
 <ion-view view-title="Ayuda y soporte">
 	<ion-content>
-		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">xTuFamilia</strong> </div>
+		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">X mi protección</strong> </div>
 		<div class="im-wrapper">
 			<!-- Ionic Components -->
 			<h4 class="border-top">
                 <i class="icon ion-help-circled"></i>
                 ¿Cómo funciona?
             </h4>
-			<p><strong>xTuFamilia</strong> está pensada para <strong>todos los hermanos migrantes</strong> que se encuentran en Estados Unidos buscando obtener mejor calidad de vida.</p>
+			<p><strong>“X mi protección”, es un paquete diseñado para inmigrantes indocumentados Mexicanos en EUA con alto riesgo de deportación, ofreciendo ayuda antes, durante y después de una detención. Esto permite tener un paquete completo con acceso desde 3 plataformas: App Móvil, Llamada telefónica y sitio web.</p>
 			<div class="list">
 				<a class="item item-icon-left"> <i class="icon ion-ios-bell"></i> Activa tu alarma </a>
-				<a class="item item-icon-left"> <i class="icon ion-ios-telephone"></i> Recibe soporte telefónico al 1-800 </a>
+				<a class="item item-icon-left"> <i class="icon ion-ios-telephone"></i> Recibe ayuda telefónica </a>
 				<a class="item item-icon-left"> <i class="icon ion-person-stalker"></i> Servicio de abogado. </a>
 				<a class="item item-icon-left"> <i class="icon ion-ios-book"></i> Recibe apoyo consultar.</a>
 				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Nos comunicaremos con tu familia. </a>
@@ -19,16 +19,68 @@
                 <i class="icon ion-help-circled"></i>
                 Plan de contingencia familiar
             </h4>
+			<p>El <strong>Plan de contigencia familiar</strong> funciona para que los agentes de <strong>x mi protección</strong> puedan contactar a tus familiares y dar instrucciones que tu hayas dejado <a ng-href="#/app/contingency_plan"><strong>administra tu plan aquí</strong></a>.</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Asesoría Migratoria
+
+            </h4>
+			<p>Asiste y brinda asesoría las 24 horas, 365 días del año, vía telefónica y correo electronico, con la mejor orientación según las necesidades, ofreciendo una comprensión del estado legal actual en materia migratoria. Apoyo según las características particulares de cada caso de los nacionales mexicanos en Estados Unidos, para dar una respuesta más realista de cómo se puede ayudar en tiempo real. 
+
+</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Red de Abogados
+
+            </h4>
+			<p>Disposición de la mejor red de abogados en temas migratorios en los Estados Unidos, que otorga una amplia oferta de servicios y una asesoría de manera personal y presencial en caso de detención.</p>
 			
-			<p>El <strong>Plan de contigencia familiar</strong> funciona para que los agentes de <strong>xTuFamilia</strong> puedan contactar a tus familiares y dar instrucciones que tu hayas dejado <a ng-href="#/app/contingency_plan"><strong>administra tu plan aquí</strong></a>.</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Plan de Contingencia
+
+            </h4>
+			
+			<p>Ante una situación crítica cuentas con procedimientos alternativos para tus contactos seleccionados, cuyo fin es una reacción especifica ante alguna detención. El plan de contingencia es un método preventivo, el cual da un avance a la hora de una eventualidad. Tu plan de contingencia hace cara a futuros acontecimientos para los que hace falta estar preparado.
+</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Botón de Pánico
+
+            </h4>
+			<p>Es una aplicación de seguridad que funciona en sistema operativo Android y iOS, la cual permite por un lado, el envío de alertas con geolocalización de donde se detona, así como un seguimiento en un lapso de 24 horas siempre y cuando este encendido el dispositivo móvil. En la práctica una vez configurada la aplicación permite que personal capacitado realice las llamadas de seguimiento a los contactos previamente seleccionados.
+</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Llamada Efectiva 1x5
+
+
+            </h4>
+			<p>Servicio de seguimiento hacia el contratante, por medio de los contactos seleccionados y abogado por medio de llamadas personalizadas. En momentos de crisis y ante una llamada de 2 minutos en un centro de detención aseguras la comunicación de todos tus contactos, convirtiendo una llamada en 5 llamadas efectivas para poder en su caso ejecutar tu plan de contingencia. Además del consulado en caso de detención para garantizar el respaldo de autoridades mexicanas y la integridad de tu persona.
+
+</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                Llamadas Ilimitadas EUA-MÉX
+
+            </h4>
+			<p>¡Habla con tus seres queridos las veces que necesites a México, EUA y a 44 países más! Llamadas ilimitadas las 24 horas, 365 días del año. Las llamadas tienen una duración máxima de 10 minutos sin limite de uso.
+</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-circled"></i>
+                News Feed
+
+
+            </h4>
+			<p>Información actualizada frecuentemente relacionada a temas migratorios para que siempre estés informado de las novedades. Ahorra tiempo y accede rápidamente a todos los contenidos de tu interés.
+
+</p>
 			<h4 class="border-top">
                 <i class="icon ion-help-circled"></i>
                 Preguntas frecuentas
             </h4>
-			
 			<p><strong>¿El servicio tiene costo?</strong></p>
 			<p><em>El servicio sí tiene costo. Es una subscripción anual que te permitirá estar protegido.</em></p>
-			
 			<p><strong>¿Cómo funciona servicio de abogado?</strong></p>
 			<p><em>El servicio de abogado te servirá para proteger tus derechos.</em></p>
 			<p><strong>¿Solo puedo registrar familiares en mi plan de contingencia?</strong></p>
