--- a/xmifamilia/xmifamilia/www/templates/panic.html
+++ b/xmifamilia/xmifamilia/www/templates/panic.html
@@ -55,13 +55,13 @@
 			<h4 ng-if="show_timer" class="border-top"><i class="icon ion-information-circled"></i> Recomendaciones</h4>
 			<div ng-if="show_timer" class="list">
 				<a class="item item-icon-left"> <i class="icon ion-android-hand"></i> Manten la calma. </a>
-				<a class="item item-icon-left"> <i class="icon ion-android-map"></i> Localizaremos el consulado cercano.
+				<a class="item item-icon-left"> <i class="icon ion-android-map"></i> Localizaremos consulado cercano.
 					<!--
                     <span class="item-note">
                         Grammy
                     </span>
 --></a>
-				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Nos comunicaremos con tu familia.
+				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Contactaremos a tu familia.
 					<!--                    <span class="badge badge-assertive">0</span>--></a>
 			</div>
 			<!--
