--- a/xmifamilia/xmifamilia/www/templates/personal_info.html
+++ b/xmifamilia/xmifamilia/www/templates/personal_info.html
@@ -15,7 +15,7 @@
             </ion-item>
             
         </ion-list>
-			<h4 class="border-top"><i class="icon ion-ios-person"></i> Subscripción</h4>
+			<h4 class="border-top"><i class="icon ion-card"></i> Subscripción</h4>
 			
 		<div class="list">
                 <a class="item item-icon-left">
@@ -38,35 +38,29 @@
 			
 			
 		
-			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-android-people"></i> Plan familiar de contingencia</h4>
-			<p>En caso de que actives la alarma de ayuda ejecutaremos este <strong>plan de contingencia</strong> manten actualizada esta información ya que es importante.</p>
-			<div class="list card stable-bg">
-				<div class="item"> 
-					<h2>Miguel Gómez</h2>
-					<p>San Luis Potosí, México</p>
+			<h4 class="border-top">
+                <i class="icon ion-help-buoy"></i>
+                Tu subscripción incluye
+            </h4>
+				
+				<div class="list card">
+					<div class="item item-body">
+						<h2 class=" text-center">Asesoría Migratoria</h2>
+						<p class="text-center">Asesoría especializada 24/7 en diversos temas migratorios. Expertos siempre disponibles para brindarte ayuda según tus necesidades.</p>
+						<h2 class=" text-center">Red de Abogados</h2>
+						<p class="text-center">Seguimiento de los mejores abogados de Estados Unidos que brindan apoyo antes, durante y después de una detención de manera presencial.</p>
+						<h2 class=" text-center">Plan de Contingencia</h2>
+						<p class="text-center">Ante una emergencia , se activa tu plan  designado para cada contacto seleccionado por medio de llamadas personalizadas para continuar tu vida aún en futuros acontecimientos difíciles</p>
+						<h2 class=" text-center">Botón de Pánico</h2>
+						<p class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica</p>
+						<h2 class=" text-center">Llamada Efectiva 1x5</h2>
+						<p class="text-center">Siempre hay alguien que te atenderá personalmente, haciendo que tu llamada ante una detención se haga efectiva a 3 contactos, abogado y consulado.</p>
+						<h2 class=" text-center">Llamadas Ilimitadas EUA-MÉX</h2>
+						<p class="text-center">Habla a México, Estado Unidos y 44 países más las veces que necesites, tus llamadas duran máximo 10 Minutos</p>
+						<h2 class=" text-center">News Feed</h2>
+						<p class="text-center">Mantenerse al día con respecto a información deseada ya no será difícil, obtén las últimas noticias en tiempo real.</p>
+					</div>
 				</div>
-				<div class="item item-body"> Llamar a mi hermamo y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.
-					<p> <a class="subdued">Relación:</a> <a class="subdued">Hermano</a> </p>
-				</div>
-				<div class="item tabs tabs-secondary tabs-icon-left">
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-ios-telephone"></i> +52 4366283658 </a>
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-edit"></i> Editar </a>
-				</div>
-			</div>
-			<div class="list card stable-bg">
-				<div>
-					<h2>Mario Pérez Hernández</h2>
-					<p>Michoacán, México</p>
-				</div>
-				<div class="item item-body"> Pedir que retire dinero de la cuenta de ahorro y enviar a primo Luis.
-					<p> <a class="subdued">Relación:</a> <a class="subdued">Padre</a> </p>
-				</div>
-				<div class="item tabs tabs-secondary tabs-icon-left">
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-ios-telephone"></i> Llamar </a>
-					<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-edit"></i> Editar </a>
-				</div>
-			</div>
-			
 <!--			<p class="text-muted text-center">Toda esta información es personal e intrasferible.</p>-->
 			
 		</div>
