Se incluye slideshow en soporte

--- a/xmifamilia/xmifamilia/www/templates/contingency_plan_edit.html
+++ b/xmifamilia/xmifamilia/www/templates/contingency_plan_edit.html
@@ -11,7 +11,7 @@
 					<input type="text" placeholder="Teléfono fijo" value="7287635799"> </label>
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Email</span>
 					<input type="email" placeholder="nombre@email.com" value="mgomez@hotmail.com"> </label>
-				<label class="item item-input item-stacked-label"> <span class="input-label">Plan de contingencia</span>
+				<label class="item item-input item-stacked-label bold"> <span class="input-label">Plan de contingencia</span>
 					<textarea placeholder="¿Qué te gustaría que le dijeramos a esta persona si activas la alarma?" rows="10">Llamar a mi hermano y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.</textarea>
 				</label>
 				<label class="item item-input item-select">
