Se carga chat en ambas apps

--- a/promigrante/app/views/content.html
+++ b/promigrante/app/views/content.html
@@ -17,17 +17,18 @@
           <i class="mdi-action-lock i-24"> </i>Bloquear pantalla
         </a>
       </li>
+			<li>
+        <a md-ink-ripple data-toggle="modal" data-target="#user">
+          <i class="mdi-communication-chat i-24"></i> Chats activos
+        </a>
+      </li>
 <!--
       <li>
         <a md-ink-ripple ng-click="app.search.show = true">
           <i class="mdi-action-search i-24"></i>
         </a>
       </li>
-      <li>
-        <a md-ink-ripple data-toggle="modal" data-target="#user">
-          <i class="mdi-social-person-outline i-24"></i>
-        </a>
-      </li>
+      
       <li class="dropdown">
         <a md-ink-ripple data-toggle="dropdown">
           <i class="mdi-navigation-more-vert i-24"></i>
