--- a/promigrante/app/views/profamilia/dashboard.html
+++ b/promigrante/app/views/profamilia/dashboard.html
@@ -4,8 +4,8 @@
         <div class="col-xs-8">
           <div class="card">
             <div class="card-heading">
-              <h2>Dashboard Pro familia</h2>
-              <small>Bienvenido al tablero de control de Pro familia</small>
+              <h2>Dashboard ProMigrante</h2>
+              <small>Bienvenido al tablero de control de ProMigrante</small>
             </div>
             <div class="card-tools">
               <ul class="list-inline">
