--- a/promigrante/app/views/profamilia/events_closed.html
+++ b/promigrante/app/views/profamilia/events_closed.html
@@ -61,7 +61,7 @@
 				<p><img src="images/promigrante/map.png" width="100%"></p>
 				<div class="col-sm-12">
 					<div class="md-form-group">
-						<label>Plan de contingencia familiar</label>
+						<label>Plan familiar de contingencia</label>
 					</div>
 					<div class="md-list md-whiteframe-z0 m-b">
 						<div class="md-list-item ">
