--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -20,9 +20,12 @@
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
-				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y suscripción </ion-item>
-				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-chatbubbles"></i> Notificaciones </ion-item>
+				<ion-item nav-clear menu-close href="#/app/chat"><i class="icon ion-chatbubbles"></i> Chat </ion-item>
 				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-ios-paper"></i> News feed </ion-item>
+				<ion-item nav-clear menu-close href="#/app/notifications"><i class="icon ion-android-cloud-done"></i> Notificaciones </ion-item>
+				
+				
+				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y suscripción </ion-item>
 				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Ayuda y soporte </ion-item>
 				
 				<ion-item nav-clear menu-close href="#/login"><i class="icon ion-door"></i> Salir </ion-item>
