--- a/promigrante/app/views/partials/aside.tpl.user.html
+++ b/promigrante/app/views/partials/aside.tpl.user.html
@@ -1,7 +1,7 @@
   <div class="box">
     <div class="p p-h-md">
       <a data-dismiss="modal" class="pull-right text-muted-lt text-2x m-t-n inline p-sm">&times;</a>
-      <strong>Members</strong>
+      <strong>Chat activos</strong>
     </div>
     <div class="box-row">
       <div class="box-cell">
@@ -10,17 +10,18 @@
             <a data-toggle="modal" data-target="#chat" data-dismiss="modal"  class="list-group-item p-h-md">
               <img src="images/a1.jpg" class="pull-left w-40 m-r img-circle">
               <div class="clear">
-                <span class="font-bold block">Jonathan Doe</span>
-                <span class="clear text-ellipsis text-xs">"Hey, What's up"</span>
+                <span class="font-bold block">Héctor Rodriguez</span>
+                <span class="clear text-ellipsis text-xs">"Hola, nececito ayuda"</span>
               </div>
             </a>
             <a data-toggle="modal" data-target="#chat" data-dismiss="modal"  class="list-group-item p-h-md">
               <img src="images/a2.jpg" class="pull-left w-40 m-r img-circle">
               <div class="clear">
-                <span class="font-bold block">James Pill</span>
-                <span class="clear text-ellipsis text-xs">"Lorem ipsum dolor sit amet onsectetur adipiscing elit"</span>
+                <span class="font-bold block">Miguel Madrid</span>
+                <span class="clear text-ellipsis text-xs">"Qué pasa si me detiene la migra?"</span>
               </div>
             </a>
+<!--
             <div class="p-h-md m-t p-v-xs">Work</div>
             <a data-toggle="modal" data-target="#chat" data-dismiss="modal"  class="list-group-item p-h-md">
                 <i class="fa fa-circle text-success text-xs m-r-xs"></i>
@@ -87,13 +88,16 @@
                 <i class="fa fa-circle text-muted-lt text-xs m-r-xs"></i>
                 <span>Helder Oliveira</span>
             </a>
+-->
           </div>
         </div>
       </div>
     </div>
+<!--
     <div class="p-h-md p-v">
       <p>Invite People</p>
       <a href class="text-muted"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
       <a href class="text-muted m-h"><i class="fa fa-fw fa-facebook"></i> Facebook</a>
     </div>
+-->
   </div>
