--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -13,6 +13,9 @@
 				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>
 			</p>
 			<p ng-if="show_timer"> Jorge, la alarma esta <strong class="calm-900 bold balanced-100-bg">activa</strong> los agentes telefónicos han recibido su reporte. Si fue un error la activación de pulse Cancelar Alarma para desactivar. </p>
+			
+			<img ng-if="show_timer" width="100%" src="img/map.png">
+			
 						<button ng-if="show_timer" id="btnCancelAlarm" ng-click="onCancelPanic()" ng-class="(showAlarm)?'activated':''" class="button button-raised button-assertive button-block icon ion-ios-bell ink-dark"> CANCELAR ALARMA</button>
 			
 			
@@ -21,9 +24,9 @@
 					
 						<p ng-if="show_timer" class="text-center">Se pedirá ayuda en 3 segundos...</p>
 -->
-			<p ng-if="!show_timer">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica.</p>
-			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-information-circled"></i> Tus servicios contratados</h4>
-			<div ng-if="!show_timer" class="list">
+			<p ng-if="!show_timer" class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica.</p>
+			<h4 ng-if="false" class="border-top"><i class="icon ion-information-circled"></i> Tus servicios contratados</h4>
+			<div ng-if="false" class="list">
 				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Asesoría Migratoria</a>
 				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Red de Abogados</a>
 				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Plan de Contingencia</a>
@@ -32,6 +35,8 @@
 				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> Llamadas Ilimitadas EUA-MÉX</a>
 				<a class="item item-icon-left"> <i class="icon balanced ion-ios-checkmark-outline"></i> News Feed</a>
 			</div>
+			
+			<button id="start_button" class="button button-block button-calm" href="tel:18009999999"> Llamar al Call Center </button>
 			<!--
 			<h4 ng-if="!show_timer" class="border-top"><i class="icon ion-info-circle"></i> Tus servicios</h4>
 			<div ng-if="!show_timer" class="list"> <a class="item">
