Se corrige suscripción

--- a/promigrante/movil/www/templates/help_support.html
+++ b/promigrante/movil/www/templates/help_support.html
@@ -102,7 +102,7 @@
                 Preguntas frecuentas
             </h4>
 			<p><strong>¿El servicio tiene costo?</strong></p>
-			<p><em>El servicio sí tiene costo. Es una subscripción anual que te permitirá estar protegido.</em></p>
+			<p><em>El servicio sí tiene costo. Es una suscripción anual que te permitirá estar protegido.</em></p>
 			<p><strong>¿Cómo funciona servicio de abogado?</strong></p>
 			<p><em>El servicio de abogado te servirá para proteger tus derechos.</em></p>
 			<p><strong>¿Solo puedo registrar familiares en mi plan de contingencia?</strong></p>
