--- a/promigrante/movil/www/templates/personal_info.html
+++ b/promigrante/movil/www/templates/personal_info.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cuenta y subscripción">
+<ion-view view-title="Cuenta y suscripción">
 	<ion-content>
 		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Mantenga actualizada su información</strong> </div>
 		<div class="im-wrapper">
@@ -15,11 +15,11 @@
             </ion-item>
             
         </ion-list>
-			<h4 class="border-top"><i class="icon ion-card"></i> Subscripción</h4>
+			<h4 class="border-top"><i class="icon ion-card"></i> Suscripción</h4>
 			
 		<div class="list">
                 <a class="item item-icon-left">
-                    <i class="icon ion-ios-checkmark-outline"></i> Subscripción
+                    <i class="icon ion-ios-checkmark-outline"></i> Suscripción
 									<span class="badge badge-balanced">activa</span>
                 </a>
                 <a class="item item-icon-left">
@@ -40,7 +40,7 @@
 		
 			<h4 class="border-top">
                 <i class="icon ion-help-buoy"></i>
-                Tu subscripción incluye
+                Tu suscripción incluye
             </h4>
 				
 				<div class="list card">
